@@ -13,8 +13,13 @@ endif
 %:
 	dh $@ --parallel
 
+override_dh_auto_clean:
+	dh_auto_clean -- MAKELEVEL=0
 override_dh_auto_build:
-	dh_auto_build -- EFI_PATH=/usr/lib VENDOR_CERT_FILE=$(cert)
+	dh_auto_build -- \
+		MAKELEVEL=0 \
+		EFI_PATH=/usr/lib \
+		VENDOR_CERT_FILE=$(cert)
 
 override_dh_fixperms:
 	dh_fixperms
